[package]
name = "helloasso-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = '0.18'
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11" }
icalendar = "0.16.0"
regex = { version = "1.10", features = [] }
chrono = "0.4"
actix-web = "4"